[gd_scene load_steps=7 format=2]

[ext_resource path="res://ball/ball.gd" type="Script" id=1]
[ext_resource path="res://ball/ballGrey.png" type="Texture" id=2]
[ext_resource path="res://ball/impactPlank_medium_004.ogg" type="AudioStream" id=3]
[ext_resource path="res://ball/impactTin_medium_000.ogg" type="AudioStream" id=4]
[ext_resource path="res://ball/impactPlate_light_004.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PaddleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BlockSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
